--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,16 @@
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "@types/webpack-env": "^1.16.2",
+    "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
     "fork-ts-checker-webpack-plugin": "^6.3.3",
     "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.4.1",
+    "node-sass": "^6.0.1",
+    "postcss-loader": "^6.1.1",
     "react-refresh": "^0.10.0",
+    "sass-loader": "^12.1.0",
     "style-loader": "^3.3.0",
     "typescript": "^4.4.3",
     "webpack": "^5.57.1",
